fix width issue with search where search text used to spill over past proper margin

--- a/web/app/themes/thecenter/assets/styles/components/_base.scss
+++ b/web/app/themes/thecenter/assets/styles/components/_base.scss
@@ -52,7 +52,8 @@ img {
   text-align: left;
   margin-top: 162-36px;
   margin-bottom: 162px;
-  margin-right: 72px;
+  margin-right: 36px;
+  @include media-md {margin-right: 72px;}
   @include color-cycle();
   @include big_text();
   max-width: 768px;
